--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "5.3.0",
+    "next": "13.4.12",
     "react": "^18",
+    "react-bootstrap": "2.8.0",
     "react-dom": "^18",
-    "next": "13.4.12"
+    "swr": "2.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.4.12"
+    "eslint-config-next": "13.4.12",
+    "typescript": "^5"
   }
 }
